# Real_Time_Video_transmit

./: README.md
sample1/: readMe.md
sample1/client/src/: App.jsx
sample1/client/src/VideoRecorder/: VideoRecorder1.jsx  VideoRecorder2.jsx  videoRecorder3.jsx
sample1/server/: index.js  package-lock.json  package.json
sample2-Interview/: package-lock.json  readMe.md
sample2-Interview/client/: package-lock.json  package.json
sample2-Interview/client/src/: App.jsx
sample2-Interview/client/src/components/: VideoInterview.jsx  VideoList.jsx  styles.css
sample2-Interview/client1/: package-lock.json
sample2-Interview/client1/src/api/: index.jsx
sample2-Interview/client2/: package-lock.json  package.json
sample2-Interview/client2/src/: App.jsx
sample3-React Node/client/: package-lock.json  package.json
sample3-React Node/client/src/: App.jsx
sample3-React Node/client/src/components/: VideoInterview.jsx  VideoInterviewMp4.jsx  VideoInterviewWebm.jsx
sample3-React Node/server/: index.js
sample3/client/src/: App.jsx
sample3/client/src/components/: Controls.jsx  Permissions.jsx  QuestionDisplay.jsx  VideoFeed.jsx  (+3 more)
sample3/server/: package.json
sample4-React Django/client/: package.json
sample4-React Django/server/: .pdm-python  pyproject.toml
sample4-React Django/server/thynkr/: db.sqlite3
sample4-React Django/server/thynkr/interviewVideos/: apps.py  models.py  urls.py  views.py
sample4-React Django/server/thynkr/interviewVideos/migrations/: 0001_initial.py
sample4-React Django/server/thynkr/thynkr/: asgi.py  settings.py  urls.py  wsgi.py
(+17 files in other folders)
