[project]
name = "server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "RyomenDev", email = "aakashvatsh007@gmail.com"},
]
dependencies = ["django>=5.1.6", "djangorestframework>=3.15.2", "django-cors-headers>=4.7.0", "pillow>=11.1.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
